--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,15 +136,10 @@ deploy_helm_dev:
   stage: deploy
   image: dtzar/helm-kubectl
   script:
-    - echo "Debugging KUBE_CONFIG..."
-    - echo "$KUBE_CONFIG" > /tmp/kubeconfig
-    - chmod 600 /tmp/kubeconfig
-    - echo "Displaying /tmp/kubeconfig contents:"
-    - cat /tmp/kubeconfig
-    - echo "Exporting KUBECONFIG..."
-    - export KUBECONFIG=/tmp/kubeconfig
-    - echo "Running kubectl config view..."
-    - kubectl config view
+    - rm -Rf .kube
+    - mkdir .kube
+    - ls
+    - cat $KUBE_CONFIG > .kube/config
     - echo "Uninstalling existing Helm release..."
     - helm uninstall app-dev -n dev || true
     - echo "Installing Helm release..."
